--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "github-api": "^3.0.0",
     "webpack": "^3.5.6"
   }
 }
